No more GFATM, Bayesian small fixes, AGYW small fixes, starting to work on AGHQ chapter

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -65,7 +65,7 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-The response has been shaped by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+The response has been shaped by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
 The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR, constituting the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], is indicative of the scale of the response.
 
 ```{r}
