--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -21,7 +21,7 @@ resource_version <- "temp"
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-In this chapter, I present an investigation of spatial random effects specifications.
+This chapter presents an investigation of spatial random effects specifications.
 My investigation was motivated by a fundamental question encountered during model construction.
 Namely, should the model be augmented to capture a conjectured feature of the data?
 The results are presented in @howes2023beyond.
