--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -4,4 +4,4 @@
 
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
-# Spatial structure
+# Models for spatial structure
