--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -14,6 +14,7 @@
 \item[HIV] Human Immunodeficiency Virus.
 \item[AIDS] Acquired ImmunoDeficiency Syndrome.
 \item[PEPFAR] President’s Emergency Plan for AIDS Relief.
+\item[the Global Fund] the Global Fund to Fight AIDS, Tuberculosis, and Malaria.
 \item[HIV] Demographic and Health Surveys.
 \item[AIS] AIDS Indicator Survey.
 \item[PrEP] Pre-Exposure Prophylaxis.
